--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
+    "@types/uuidv4": "^5.0.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.3.2"
   },
@@ -23,7 +25,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "uuidv4": "^6.2.10"
   }
 }
