--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/fs-extra": "^9.0.11",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
